--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Monika ❤️</title>
 
-<style>
 body{
 margin:0;
 font-family:Segoe UI;
 text-align:center;
 color:white;
 background:linear-gradient(135deg,#1a001f,#330033,#660033);
-overflow:hidden;
+overflow-x:hidden;
+overflow-y:auto;
 }
 
 .container{
