--- a/index.html
+++ b/index.html
@@ -4,54 +4,71 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Monika ❤️</title>
 
-body{
-margin:0;
-font-family:Segoe UI;
-text-align:center;
-color:white;
-background:linear-gradient(135deg,#1a001f,#330033,#660033);
-overflow-x:hidden;
-overflow-y:auto;
+<style>
+body {
+  margin: 0;
+  font-family: 'Segoe UI', sans-serif;
+  text-align: center;
+  color: white;
+  background: linear-gradient(135deg,#1a001f,#330033,#660033);
 }
 
-.container{
-padding:25px;
+/* Container */
+.container {
+  padding: 25px 15px 60px 15px;
 }
 
-img{
-width:90%;
-max-width:380px;
-border-radius:20px;
-box-shadow:0 0 40px #ff4b7d;
-margin-top:20px;
+/* Image */
+img {
+  width: 90%;
+  max-width: 380px;
+  border-radius: 20px;
+  box-shadow: 0 0 35px #ff4b7d;
+  margin-top: 20px;
 }
 
-button{
-display:block;
-width:100%;
-margin:12px 0;
-padding:14px;
-border:none;
-border-radius:30px;
-background:linear-gradient(45deg,#ff4b7d,#ff758c);
-color:white;
-font-size:16px;
+/* Text */
+p {
+  line-height: 1.7;
+  font-size: 16px;
 }
 
-.hidden{
-display:none;
+/* Buttons */
+button {
+  display: block;
+  width: 100%;
+  margin: 12px 0;
+  padding: 14px;
+  border: none;
+  border-radius: 30px;
+  background: linear-gradient(45deg,#ff4b7d,#ff758c);
+  color: white;
+  font-size: 16px;
 }
 
-.petal{
-position:fixed;
-top:-10px;
-font-size:24px;
-animation:fall linear infinite;
+/* Hidden section */
+.hidden {
+  display: none;
 }
 
-@keyframes fall{
-0%{transform:translateY(0) rotate(0);}
-100%{transform:translateY(110vh) rotate(360deg);}
+/* Result */
+#result {
+  margin-top: 15px;
+  font-size: 18px;
+}
+
+/* Rose Petals */
+.petal {
+  position: fixed;
+  top: -20px;
+  font-size: 22px;
+  animation: fall linear forwards;
+  pointer-events: none;
+}
+
+@keyframes fall {
+  0% { transform: translateY(0) rotate(0deg); opacity:1; }
+  100% { transform: translateY(110vh) rotate(360deg); opacity:0; }
 }
 </style>
 </head>
@@ -60,7 +77,7 @@ animation:fall linear infinite;
 
 <div class="container">
 
-<img src="https://i.ibb.co/hF9tkP7K/20250427-184047.jpg">
+<img src="https://i.ibb.co/hF9tkP7K/20250427-184047.jpg" alt="Monika ❤️">
 
 <h2>Happy Valentine’s Day My Love ❤️</h2>
 
@@ -87,6 +104,7 @@ and I will make it happen for you 💖
 </div>
 
 <div id="options" class="hidden">
+
 <h3>Select Your Celebration 😘</h3>
 
 <button onclick="selectOption('Day Trip 🌅')">🌅 Day Trip</button>
@@ -95,30 +113,36 @@ and I will make it happen for you 💖
 <button onclick="selectOption('I’ll Cook Anything 👨‍🍳❤️')">👨‍🍳 I’ll Cook Anything</button>
 
 <p id="result"></p>
+
 </div>
 
 </div>
 
 <script>
 function showOptions(){
-document.getElementById("message").style.display="none";
-document.getElementById("options").style.display="block";
+  document.getElementById("message").style.display="none";
+  document.getElementById("options").style.display="block";
+  window.scrollTo(0,0);
 }
 
 function selectOption(choice){
-document.getElementById("result").innerHTML=
-"You selected: <b>"+choice+"</b> 💖 Anything for you Monika ❤️ Forever yours.";
+  document.getElementById("result").innerHTML =
+  "You selected: <b>"+choice+"</b> 💖<br>Anything for you, Monika ❤️ Forever yours.";
 }
 
+/* Slow Rose Petals */
 setInterval(function(){
-var petal=document.createElement("div");
-petal.className="petal";
-petal.innerHTML="🌹";
-petal.style.left=Math.random()*100+"vw";
-petal.style.animationDuration=(Math.random()*6+6)+"s";
-document.body.appendChild(petal);
-setTimeout(function(){petal.remove();},12000);
-},1000);
+  var petal = document.createElement("div");
+  petal.className = "petal";
+  petal.innerHTML = "🌹";
+  petal.style.left = Math.random()*100 + "vw";
+  petal.style.animationDuration = (Math.random()*5+5) + "s";
+  document.body.appendChild(petal);
+
+  setTimeout(function(){
+    petal.remove();
+  },10000);
+},1200);
 </script>
 
 </body>
